Solve long ticket wrapping issue (issue 7)

--- a/src/components/TicketUpdates.css
+++ b/src/components/TicketUpdates.css
@@ -9,6 +9,10 @@
     z-index: -1;
     width: 40px;
 } */
+.update {
+    display: inline-flex;
+}
+
 .ticket-updates {
 	position: relative;
 }
